[package]
name = "polkadyn"
version = "0.1.0"
edition = "2021"
description = "dynamically decode substrate according to metadata. no network deps. no async deps."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parity-scale-codec = { version = "3.1.5", default-features = false, features = [] }
scale-info = { version= "*", default-features = false, features = []  }
scale-value = { version = "0.2", default-features = false }
frame-metadata = { version="15.0", default-features = false, features = ["v14"] }
serde_json = { version="1.0", optional = true }
hex = { version = "0.4", optional = true }

[dev-dependencies]
polkapipe = { git="https://github.com/gilescope/polkapipe.git", features=["wss"] }
async-std = "*"
hex = "0.4"

[features]
default = ["json"]
json = ["serde_json", "hex"]
